--- a/CATeam3LAPS/src/main/resources/templates/adminLeaveTypeList.html
+++ b/CATeam3LAPS/src/main/resources/templates/adminLeaveTypeList.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <title>Admin-ViewLeaveType</title>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
+</head>
+
+<body>
+<table th:unless="${#lists.isEmpty(leaveTypes)}" border="1 pt">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="leaveType:${leaveTypes}">
+        <td th:text="${leaveType.leaveTypeId}">ID</td>
+        <td th:text="${leaveType.description}">Description</td>
+        <td ><a href="edit.html" th:href="@{/admin/leave-type/edit/} + ${leaveType.leaveTypeId}">Edit</a>
+            <a href="edit.html" th:href="@{/admin/leave-type/delete/} + ${leaveType.leaveTypeId}">Delete</a></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
