--- a/CATeam3LAPS/src/main/resources/static/css/leave-type-style.css
+++ b/CATeam3LAPS/src/main/resources/static/css/leave-type-style.css
@@ -2,10 +2,14 @@
 .button-add{
     background-color: #199319;
     color: white;
-    padding: 15px 25px;
+    padding: 40px 25px;
     text-decoration: none;
 }
 
 .button-add:hover{
     background-color: #223094;
+}
+
+.main-div{
+    padding-top: 100px;
 }
