--- a/CATeam3LAPS/src/main/resources/templates/adminUserList.html
+++ b/CATeam3LAPS/src/main/resources/templates/adminUserList.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<title>Admin-ViewUser</title>
-	<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" media="all"
-		  href="../../css/table-style.css" th:href="@{/css/table-style.css}"/>
-</head>
+<head th:replace="fragments/adminGeneral.html :: headerfiles"/>
 
 <body>
-	<h>>Staff Listing</h2>
-	<a th:href="@{/admin/staff/addStaff}">Add New Staff</a>
-	</br>
-	<h2>My team</h2>
+<div th:replace="fragments/adminGeneral.html :: menu"></div>
+<div class="main-div">
+	<a class = "button-add" th:href="@{/admin/staff/addStaff}">Add New Staff</a>
 	<table class="content-table" th:unless="${#lists.isEmpty(userList)}" border="1 pt">
 		<thead>
 			<tr>
@@ -63,6 +54,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 
 </html>
