--- a/CATeam3LAPS/src/main/resources/templates/editLeave.html
+++ b/CATeam3LAPS/src/main/resources/templates/editLeave.html
@@ -1,78 +1,138 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
-    <meta charset="ISO-8859-1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Update Leave Application</title>
+    <title>Apply Leave</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
+
 <body>
 
-<div class="container" style="float:left; width:600px; margin-left:350px">
-    <p th:text="${error}" style="color:red; margin-left:100px"><b></b></p>
-    <h2 style="margin-left:70px; margin-bottom:20px; width:auto">Update Leave Application</h2>
-    <form class="form-horizontal" th:object="${leaveApplied}" th:action="@{/leave/updateLeaveApplied}" method="get"
-          style="margin-left:100px">
+<form action="editLeave" th:object="${leaveApplied}" th:action="@{/leave/updateLeaveApplied}" method="get">
+    <input type="hidden" th:field="*{leaveAppliedId}">
+    <input type="hidden" th:value="${session.id}" th:attr="name='user.id'">
+    <div class="row mb-3">
+        <label for="leaveType" class="col-sm-2 col-form-label">Leave Type</label>
+        <div class="col-sm-5">
+            <select class="form-select" aria-label="Default select example" th:field="*{leaveType}">
+                <option th:each="type : ${leaveTypeList}" th:value="${type.leaveTypeId}" th:text="${type.description}">type</option>
+            </select>
+        </div>
+    </div>
 
-        <input type="hidden" class="form-control" th:field="*{leaveAppliedId}"/>
-        <input type="hidden" th:value="${session.id}" th:attr="name='staff.id'">
-        <div class="form-group">
-            <label class="control-label col-sm-2" style="width:auto">Leave Type:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" th:field="*{leaveType.description}" style="width:300px">
+    <div class="row mb-3">
+        <label for="start" class="col-sm-2 col-form-label">Start date</label>
+        <div class="col-sm-5">
+            <input type="date" th:field="*{leaveStartDate}"
+                   placeholder="yyyy-MM-dd"
+                   min="2021-12-01" max="2022-12-31"
+                   required pattern="\d{2}-\d{2}-\d{4}">
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label for="start" class="col-sm-2 col-form-label">End date</label>
+        <div class="col-sm-5">
+            <input type="date" th:field="*{leaveEndDate}"
+                   placeholder="yyyy-MM-dd"
+                   min="2021-12-01" max="2022-12-31"
+                   required pattern="\d{2}-\d{2}-\d{4}">
+        </div>
+    </div>
+
+
+    <div class="row mb-3">
+        <label for="ReasonLeave" class="col-sm-2 col-form-label">Reason of Leave</label>
+        <div class="col-sm-5">
+            <textarea class="form-control" th:field="*{leaveReason}" rows="4"></textarea>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label>Work Dissemination:</label>
+        <div>
+            <input type="text" class="form-control" th:field="*{workDissemination}">
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Overseas Trip</label>
+        <div class="col-sm-5">
+            <div class="form-check">
+                <label class="form-check-label"><input class="form-check-input" type="radio" value="true" checked
+                                                       th:field="*{isOverseas}"> Yes</label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label"><input class="form-check-input" type="radio" value="false"
+                                                       th:field="*{isOverseas}">No</label>
             </div>
         </div>
-        <div class="form-group">
-            <label class="control-label" style="margin-left:15px">Start Date:</label><br>
-            <div class="col-sm-10" style="width:170px">
-                <input type="text" class="form-control" th:field="*{leaveStartDate}" style="width:180px"
-                       placeholder="e.g. 20-09-2019">
-                <p th:if="${#fields.hasErrors('leaveStartDate')}" th:errors="*{leaveStartDate}" style="color:red"></p>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label" style="margin-left:15px">End Date:</label><br>
-            <div class="col-sm-10" style="width:170px">
-                <input type="text" class="form-control" th:field="*{leaveEndDate}" style="width:180px"
-                       placeholder="e.g. 20-09-2019">
-                <p th:if="${#fields.hasErrors('leaveEndDate')}" th:errors="*{leaveEndDate}" style="color:red"></p>
-            </div>
-        </div>
-        <!--        <div class="form-group">-->
-        <!--            <label class="control-label col-sm-2" for="pwd" style="width:auto">Contact Detail:</label>-->
-        <!--            <div class="col-sm-10">-->
-        <!--                <input type="text" class="form-control" th:field="*{contactDetails}" style="width:300px" readonly>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--        <div class="form-group">-->
-        <!--            <label class="control-label col-sm-2" for="pwd" style="width:auto">Work Dissemination:</label>-->
-        <!--            <div class="col-sm-10">-->
-        <!--                <input type="text" class="form-control" th:field="*{workDissemination}" style="width:300px" readonly>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <div class="form-group">
-            <label class="control-label col-sm-2" style="width:auto">Oversea Trip:</label>
-            <div class="col-sm-10">
-                <input type="radio" id="isOverseasYes" th:field="*{isOverseas}" value="true">
-                <label for="isOverseasYes">Yes</label><br>
-                <input type="radio" id="isOverseasNo" th:field="*{isOverseas}" value="false">
-                <label for="isOverseasNo">No</label><br>
-            </div>
-        </div>
-        <div class="form-group" style="margin-top:20px;margin-left:2px">
-            <label>Reason of Leave:</label>
-            <textarea class="form-control" th:field="*{leaveReason}" style="width:300px"></textarea>
-            <p th:if="${#fields.hasErrors('leaveReason')}" th:errors="*{leaveReason}" style="color:red"></p>
-        </div>
-        <div class="form-group" style="margin-top:10px; margin-bottom:80px">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success" style="width:100px">Submit</button>
-            </div>
-        </div>
-    </form>
-</div>
+    </div>
+
+    <!--    <div>-->
+    <!--        <form action="storeOverseasTrip" th:object="${overseasTrip}"> // here I'm not sure-->
+    <!--            <div class="row mb-3">-->
+    <!--                <label class="col-sm-2 col-form-label">Country</label>-->
+    <!--                <div class="col-sm-5">-->
+    <!--                    <input type="text" class="form-control" th:field="*{country}"/>-->
+    <!--                </div>-->
+    <!--            </div>-->
+
+    <!--            <div class="row mb-3">-->
+    <!--                <label class="col-sm-2 col-form-label">City</label>-->
+    <!--                <div class="col-sm-5">-->
+    <!--                    <input type="text" class="form-control" th:field="*{city}"/>-->
+    <!--                </div>-->
+    <!--            </div>-->
+
+    <!--            <div class="row mb-3">-->
+    <!--                <label class="col-sm-2 col-form-label">Phone</label>-->
+    <!--                <div class="col-sm-5">-->
+    <!--                    <input type="text" class="form-control" th:field="*{phone}"/>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <button class="btn btn-secondary" type="submit">OK</button>-->
+    <!--        </form>-->
+    <!--    </div>-->
+    <button class="btn btn-secondary" type="submit">Submit form</button>
+    <button class="btn btn-secondary" type="reset">Reset</button>
+</form>
+
+
+<br>
+<br>
+<table class="table table-dark table-striped">
+    <thead>
+    <tr>
+        <th scope="col">Type of Leave</th>
+        <th scope="col">Initial Balance</th>
+        <th scope="col">Taken</th>
+        <th scope="col">Availiable</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Medical Leave</th>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <th scope="row">Annual Leave</th>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <th scope="row">Compensation</th>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
-</html>
