--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
@@ -4,51 +4,29 @@
 
 <body>
 	<div th:replace="fragments/layout.html :: menu"/>
-	
-	
 	<div th:replace="fragments/managerGeneral.html :: header"/>
 	<div th:replace="fragments/managerGeneral.html :: manager_head"/> 
 	<h3>My Team</h3>
 	
 	<div th:if="${not #lists.isEmpty(teamList)}">
-		<table>
-			<tr class="listRecord" th:each="entry, stat : ${pendingapproval} ">
-			<!--entry, stat iterated inside pendingapproval object-->
-				<td>
-					<div th:if="${not #lists.isEmpty(entry.value)}">
-						<span th:text="${entry.key.Username}">Name</span> <br />
-						<table style="border: 1;">
-							<tr class="listHeading">
-								<th th:utext="#{fieldLabel.leaveID}">LeaveID</th>
-								<th th:utext="#{fieldLabel.name}">Name</th>
-								<th th:utext="#{fieldLabel.appliedDate}">AppliedDate</th>
-								<th th:utext="#{fieldLabel.startDate}">LeaveStartDate</th>
-								<th th:utext="#{fieldLabel.startTime}">LeaveStartTime</th>
-								<th th:utext="#{fieldLabel.endDate}">LeaveEndDate</th>
-								<th th:utext="#{fieldLabel.endTime}">LeaveEndTime</th>
-								<th th:utext="#{fieldLabel.leaveType}">LeaveType</th>
-								<th th:utext="#{fieldLabel.status}">Status</th>
-								<th th:utext="#{title.leaveDetails}">Leave Details</th>
-							</tr>
-							<tr class="listRecord" th:each="leaveApplied : ${entry.value}">
-								<td th:text="${leaveApplied.leaveAppliedId}">Id</td>
-								<td th:text="${entry.key.Username}">Name</td>
-								<td th:text="${leaveApplied.appliedDate}">Applied Date</td>
-								<td th:text="${leaveApplied.leaveStartDate}">LeaveStartDate</td>
-								<td th:text="${leaveApplied.leaveStartTime}">LeaveStartTime</td>
-								<td th:text="${leaveApplied.leaveEndDate}">LeaveEndDate</td>
-								<td th:text="${leaveApplied.leaveEndTime}">LeaveEndTime</td>
-								<td th:text="${leaveApplied.leaveType}">LeaveType</td>
-								<td th:text="${leaveApplied.approvalStatus}">Status</td>
-								<td><a th:href="@{/manager/leave/display/}+${leaveApplied.leaveAppliedId}"
-										class="btn btn-default"><span th:text="#{caption.detail}"></span></a></td>
-							</tr>
-						</table>
-					</div>
-				</td>
+		<table style="border: 1;">
+			<tr class="listHeading">
+				<th>Staff ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Email</th>
+				<th>View Leave History</th>
+			</tr>
+			<tr class="listRecord" th:each="teamMember : ${teamList}">
+				<td th:text="${teamMember.id}">Id</td>
+				<td th:text="${teamMember.firstName}">First Name</td>
+				<td th:text="${teamMember.lastName}">Last Name</td>
+				<td th:text="${teamMember.email}">Email</td>
+				<td><a href = "managerTeamMemLeaveList.html"
+				 	th:href="@{/manager/team/}+${teamMember.id}"
+					class="btn btn-default"><span th:text="View Leaves"></span></a></td>
 			</tr>
 		</table>
 	</div>
-
 </body>
 </html>
