--- a/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
@@ -8,7 +8,9 @@
           href="../../css/leave-type-style.css" th:href="@{/css/leave-type-style.css}"/>
     <link rel="stylesheet" type="text/css" media="all"
           href="../../css/table-style.css" th:href="@{/css/table-style.css}"/>
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+		  crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -21,7 +23,7 @@
         <li class="menu-item"><a th:href="@{/admin/staff/}" >Manage Staff</a></li>
         <li class="menu-item"><a th:href="@{/admin/leave-type/list}" >Manage Leave Type</a></li>
         <li class="menu-item"><a th:href="@{/admin/role/list}" >Manage Role</a></li>
-        <li class="menu-item"><a th:href="@{/admin/holiday/list}" >Manage Holidays</a></li>
+        <li class="menu-item"><a th:href="@{/admin/holiday/list/1}" >Manage Holidays</a></li>
     </ul>
 </div>
 </body>
