--- a/CATeam3LAPS/src/main/resources/templates/adminHolidayForm.html
+++ b/CATeam3LAPS/src/main/resources/templates/adminHolidayForm.html
@@ -4,14 +4,21 @@
 <head th:replace="fragments/adminGeneral.html :: headerfiles"/>
 
 <body>
+<div th:replace="fragments/adminGeneral.html :: menu"></div>
+<div class = "main-div">
 	<form th:object="${publicHoliday}" th:action="@{/admin/holiday/saveHoliday}" method="POST">
 		<fieldset>
 			<input type="hidden" th:field="*{holidayId}"/>
 		</fieldset>
-		<fieldset>
+		<div class="clearfix">
+		<div class="col-75">
+		<fieldset >
 			Holiday Name : <input type="text" th:field="*{holidayName}" placeholder="Holiday Name"/>
 		</fieldset>
-		
+		</div>
+		</div>
+
+		<div class="clearfix">
 		<fieldset class="row mb-3">
 			<label class="col-sm-2 col-form-label">Start date</label>
 			<div class="col-sm-3">
@@ -21,7 +28,9 @@
 						required pattern="\d{2}-\d{2}-\d{4}">
 			</div>
 		</fieldset>
-		
+		</div>
+
+		<div class="clearfix">
 		<fieldset class="row mb-3">
 			<label class="col-sm-2 col-form-label">End date</label>
 			<div class="col-sm-5">
@@ -31,6 +40,7 @@
 						required pattern="\d{2}-\d{2}-\d{4}">
 			</div>
 		</fieldset>
+		</div>
 	
 		<fieldset>
 			<input type="submit" value="SAVE" />
@@ -38,6 +48,7 @@
 			<input type="reset" value="RESET" />
 		</fieldset>
 	</form>
+</div>
 </body>
 
 </html>
