--- a/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
@@ -8,6 +8,8 @@
           href="../../css/leave-type-style.css" th:href="@{/css/leave-type-style.css}"/>
     <link rel="stylesheet" type="text/css" media="all"
           href="../../css/table-style.css" th:href="@{/css/table-style.css}"/>
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../../css/form-style.css" th:href="@{/css/form-style.css}"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
 		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
 		  crossorigin="anonymous">
