--- a/CATeam3LAPS/src/main/resources/templates/viewHistory.html
+++ b/CATeam3LAPS/src/main/resources/templates/viewHistory.html
@@ -18,6 +18,7 @@
             <td><b>End Date</b></td>
             <td><b>Number of Days</b></td>
             <td><b>Status</b></td>
+            <td><b>Detail</b></td>
         </tr>
         </thead>
         <tbody>
@@ -28,7 +29,9 @@
             <td th:text=${leaveApplied.leaveEndDate}>End Date</td>
             <td th:text=${leaveApplied.noOfDays}>Number of Days</td>
             <td th:text=${leaveApplied.approvalStatus}>Status</td>
-            <!--            <td><a class="button2" th:href="@{/leave/viewdetails/}+${leaveApplied.id}">View Details</a></td>-->
+            <td><a th:href="@{/leave/detail/}+${leaveApplied.leaveAppliedId}">
+                <button type="button" class="btn btn-danger">Detail</button>
+            </a></td>
         </tr>
         </tbody>
     </table>
