--- a/CATeam3LAPS/src/main/resources/templates/adminLeaveTypeForm.html
+++ b/CATeam3LAPS/src/main/resources/templates/adminLeaveTypeForm.html
@@ -12,6 +12,7 @@
         </fieldset>
         <fieldset>
             Leave Type Description <input type="text" th:field="*{description}">
+            <p style="color:red" th:if"${#fields.hasErrors('description')}" th:errors="*{description}"></p>
         </fieldset>
         <fieldset>
             <input type="submit" value="Save"/>
