--- a/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
@@ -23,8 +23,8 @@
 <div th:fragment="menu" id="menu">
     <ul class="admin-nav-bar">
         <li class="menu-item"><a th:href="@{/admin/staff/}" >Manage Staff</a></li>
-        <li class="menu-item"><a th:href="@{/admin/leave-type/list}" >Manage Leave Type</a></li>
-        <li class="menu-item"><a th:href="@{/admin/role/list}" >Manage Role</a></li>
+        <li class="menu-item"><a th:href="@{/admin/leave-type/list/1}" >Manage Leave Type</a></li>
+        <li class="menu-item"><a th:href="@{/admin/role/list/1}" >Manage Role</a></li>
         <li class="menu-item"><a th:href="@{/admin/holiday/list/1}" >Manage Holidays</a></li>
     </ul>
 </div>
