--- a/CATeam3LAPS/src/main/resources/templates/adminRoleList.html
+++ b/CATeam3LAPS/src/main/resources/templates/adminRoleList.html
@@ -26,6 +26,27 @@
         </tr>
         </tbody>
     </table>
+    <div th:if="${totalPages>0}">
+		<div class="row col-sm-10">
+			<div class="col-sm-2">
+				Total Rows: [[${totalItems}]]
+			</div>
+			<div class="col-sm-1">
+				<span th:each="i: ${#numbers.sequence(1,totalPages)}">
+					<a th:if="${currentPage != i}" th:href="@{'/admin/role/list/' + ${i}}">[[${i}]]</a>
+					<span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
+				</span>
+			</div>
+			<div class="col-sm-1">
+				<a th:if="${currentPage<totalPages}" th:href="@{'/admin/role/list/' + ${currentPage +1}}">Next</a>
+				<span th:unless="${currentPage<totalPages}">Next</span>
+			</div>
+			<div class="col-sm-1">
+				<a th:if="${currentPage<totalPages}" th:href="@{'/admin/role/list/' + ${totalPages}}">Last</a>
+				<span th:unless="${currentPage<totalPages}">Last</span>
+			</div>
+		</div>
+	</div>
 </div>
 </body>
 </html>
