--- a/CATeam3LAPS/src/main/resources/static/css/form-style.css
+++ b/CATeam3LAPS/src/main/resources/static/css/form-style.css
@@ -37,6 +37,7 @@ form {
 }
 
 input[type="text"],
+input[type="number"]
 input[type="email"],
 select,
 textarea {
@@ -48,6 +49,7 @@ textarea {
 }
 
 input[type="text"]:focus,
+input[type="number"]:focus,
 input[type="email"]:focus,
 select:focus,
 textarea:focus { border: 1px solid #bbb; }
