Add staff logout

--- a/CATeam3LAPS/src/main/resources/templates/fragments/staffGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/staffGeneral.html
@@ -25,6 +25,7 @@
         <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Home</a></li>
         <li class="menu-item"><a th:href="@{/applyleave}" >Apply Leave</a></li>
         <li class="menu-item"><a th:href="@{/leave/viewHistory}" >View History</a></li>
+        <li class="menu-item"><a th:href="@{/stafflogout}" >Logout</a></li>
     </ul>
 </div>
 </body>
