Add mock Claim Compensation header

--- a/CATeam3LAPS/src/main/resources/templates/fragments/staffGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/staffGeneral.html
@@ -24,6 +24,7 @@
     <ul class="admin-nav-bar">
         <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Home</a></li>
         <li class="menu-item"><a th:href="@{/applyleave}" >Apply Leave</a></li>
+        <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Claim Compensation</a></li>
         <li class="menu-item"><a th:href="@{/leave/viewHistory}" >View History</a></li>
         <li class="menu-item"><a th:href="@{/stafflogout}" >Logout</a></li>
     </ul>
