--- a/CATeam3LAPS/src/main/resources/templates/applyLeave.html
+++ b/CATeam3LAPS/src/main/resources/templates/applyLeave.html
@@ -2,27 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 
-<head>
-    <title>Apply Leave</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-</head>
+<head th:replace="fragments/staffGeneral.html :: headerfiles"/>
 
 <body>
+<div th:replace="fragments/staffGeneral.html :: menu"></div>
 
 	<form action="applyLeave" th:object="${leaveapplication}" th:action="@{/applyleave/submit}" method="POST">
-	    <input type="hidden" th:field="*{leaveAppliedId}">  
+	    <input type="hidden" th:field="*{leaveAppliedId}">
 	    <input type="hidden" th:value="${session.id}" th:attr="Username='user.id'">
 	    <div class="row mb-3">
 	        <label for="leaveType" class="col-sm-2 col-form-label">Leave Type</label>
 	        <div class="col-sm-5">
-	            <select class="form-select" aria-label="Default select example" th:field="*{leaveType}">
-	                <option th:value="'Annual Leave'" th:text="Annual Leave"></option>
-	                <option th:value="'Medical Leave'" th:text="Medical Leave"></option>
-	            </select>
+				<select class="form-select" aria-label="Default select example" th:field="*{leaveType}">
+					<option th:each="type : ${leaveTypeList}" th:value="${type.leaveTypeId}" th:text="${type.description}">
+						type
+					</option>
+				</select>
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">Start date</label>
 	        <div class="col-sm-5">
@@ -32,7 +30,7 @@
 	                   required>
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">End date</label>
 	        <div class="col-sm-5">
@@ -42,35 +40,35 @@
 	                   required>
 	        </div>
 	    </div>
-	
-	
+
+
 	    <div class="row mb-3">
 	        <label for="ReasonLeave" class="col-sm-2 col-form-label">Reason of Leave</label>
 	        <div class="col-sm-5">
 	            <textarea class="form-control" th:field="*{leaveReason}" rows="4"></textarea>
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">Work Dissemination:</label>
 	        <div class="col-sm-5">
 	            <input type="text" class="form-control" th:field="*{workDissemination}">
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">Overseas Trip</label>
-	        
+
 	        <div class="col-sm-5">
 	            <div class="form-check">
 	                <label class="form-check-label"><input class="form-check-input" type="radio" value="true" checked
-	                                                       th:field="*{isOverseas}"> 
+	                                                       th:field="*{isOverseas}">
 	                 Yes
 	                 </label>
 	            </div>
 	        </div>
 	    </div>
-	
+
 	    <input type="hidden" class="form-control" th:field="*{overseasTrip.overseasLeaveId}" />
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">Country</label>
@@ -78,14 +76,14 @@
 	            <input type="text" class="form-control" th:field="*{overseasTrip.country}"/>
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">City</label>
 	        <div class="col-sm-5">
 	            <input type="text" class="form-control" th:field="*{overseasTrip.city}"/>
 	        </div>
 	    </div>
-	
+
 	    <div class="row mb-3">
 	        <label class="col-sm-2 col-form-label">Phone</label>
 	        <div class="col-sm-5">
