--- a/CATeam3LAPS/src/main/resources/templates/editLeave.html
+++ b/CATeam3LAPS/src/main/resources/templates/editLeave.html
@@ -8,6 +8,7 @@
 <div th:replace="fragments/staffGeneral.html :: menu"></div>
 
 <form action="editLeave" th:object="${leaveApplied}" th:action="@{/leave/updateLeaveApplied}" method="get">
+    <input type="hidden" th:field="*{appliedDate}">
     <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Leave ID</label>
         <div class="col-sm-5">
