--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/managerGeneral.html :: html_head"/>
+<head th:replace="fragments/managerGeneral.html :: headerfiles"/>
 
 <body>
-	<div th:replace="fragments/layout.html :: menu"/>
+    <div th:replace="fragments/managerGeneral.html :: menu"></div>
+	<h3> Team Member Leave History </h3 >
+	<br/>
+	
+	<button type="button"><a th:href="@{/manager/team}"
+					class="btn btn-default">Back to Team</a></button>
 	
 	
-	<div th:replace="fragments/managerGeneral.html :: header"/>
-	<div th:replace="fragments/managerGeneral.html :: manager_head"/> 
-	<h3>Employee's Leave History</h3>
-	
-	<div th:if="${not #lists.isEmpty(pendingapproval)}">
-		<table>
-			<tr class="listRecord" th:each="entry, stat : ${pendingapproval} ">
-			<!--entry, stat iterated inside pendingapproval object-->
-				<td>
-					<div th:if="${not #lists.isEmpty(entry.value)}">
-						<span th:text="${entry.key.Username}">Name</span> <br />
-						<table style="border: 1;">
-							<tr class="listHeading">
-								<th th:utext="#{fieldLabel.leaveID}">LeaveID</th>
-								<th th:utext="#{fieldLabel.name}">Name</th>
-								<th th:utext="#{fieldLabel.appliedDate}">AppliedDate</th>
-								<th th:utext="#{fieldLabel.startDate}">LeaveStartDate</th>
-								<th th:utext="#{fieldLabel.startTime}">LeaveStartTime</th>
-								<th th:utext="#{fieldLabel.endDate}">LeaveEndDate</th>
-								<th th:utext="#{fieldLabel.endTime}">LeaveEndTime</th>
-								<th th:utext="#{fieldLabel.leaveType}">LeaveType</th>
-								<th th:utext="#{fieldLabel.status}">Status</th>
-								<th th:utext="#{title.leaveDetails}">Leave Details</th>
-							</tr>
-							<tr class="listRecord" th:each="leaveApplied : ${entry.value}">
-								<td th:text="${leaveApplied.leaveAppliedId}">Id</td>
-								<td th:text="${entry.key.Username}">Name</td>
-								<td th:text="${leaveApplied.appliedDate}">Applied Date</td>
-								<td th:text="${leaveApplied.leaveStartDate}">LeaveStartDate</td>
-								<td th:text="${leaveApplied.leaveStartTime}">LeaveStartTime</td>
-								<td th:text="${leaveApplied.leaveEndDate}">LeaveEndDate</td>
-								<td th:text="${leaveApplied.leaveEndTime}">LeaveEndTime</td>
-								<td th:text="${leaveApplied.leaveType}">LeaveType</td>
-								<td th:text="${leaveApplied.approvalStatus}">Status</td>
-								<td><a th:href="@{/manager/leave/display/}+${leaveApplied.leaveAppliedId}"
-										class="btn btn-default"><span th:text="#{caption.detail}"></span></a></td>
-							</tr>
-						</table>
-					</div>
+	<centre>
+	<h5 th:if="${#lists.isEmpty(thisSubLeave)}" style="text-align: center;"> No Leave Entries Found for This Team Member </h5>
+	</centre>
+	<table class="content-table" th:unless="${#lists.isEmpty(thisSubLeave)}" border="1 pt">
+		<thead>
+			<tr>
+				<th>Leave ID</th>
+				<th>Staff Name </th>
+				<th>Applied Date </th>
+				<th>Leave Start Date </th>
+				<th>Leave End Date </th>
+				<th>LeaveType </th>
+				<th>Status </th>
+				<th> Action </th> 
+			</tr>
+		</thead>
+		<tbody>	
+			<tr class="listRecord" th:each="leave : ${thisSubLeave}">
+				<td th:text="${leave.leaveAppliedId}">Leave Id</td>
+				<td th:text="${leave.user.firstName+ ' '+leave.user.lastName}">Staff Name</td>
+				<td th:text="${leave.appliedDate}">Applied Date</td>
+				<td th:text="${leave.leaveStartDate}">Leave Start Date</td>
+				<td th:text="${leave.leaveStartDate}">Leave End Date</td>
+				<td th:text="${leave.leaveType.description}">LeaveType</td>
+				<td th:text="${leave.approvalStatus}">Status</td>
+				<td><button type="button"><a th:href="@{/manager/leave/display/}+${leave.leaveAppliedId}"
+					class="btn btn-default">View Details</a></button></td>
 				</td>
 			</tr>
-		</table>
-	</div>
-
+		</tbody>
+	</table>
 </body>
+
 </html>
