--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
@@ -20,6 +20,7 @@
 				<th>Staff ID</th>
 				<th>Staff Name</th>
 				<th>Email</th>
+				<th> No. of Entries </th>
 				<th>Actions</th>
 			</tr>
 		</thead>
@@ -28,9 +29,12 @@
 				<td th:text="${teamMember.id}">Id</td>
 				<td th:text="${teamMember.firstName+ ' '+teamMember.lastName}">Staff Name</td>
 				<td th:text="${teamMember.email}">Email</td>
+				<td th:text="${#lists.size(teamMember.leaveAppliedList)}">No. of Entries</td>
 				<td>
+				<button type="button">
 					<a href = "subLeaves.html" th:href="@{/manager/team/}+${teamMember.id}"
-					class="btn btn-default"> View Leaves </a>
+					class="btn btn-default"> Edit </a>
+				</button>
 				</td>
 			</tr>
 		</tbody>
