Updated pending list view

--- a/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
@@ -32,8 +32,8 @@
         <ul>
         	<li class="menu-item"> <span> Manager: </span> </li>
 	        <li class="menu-item"><a th:href="@{/manager/pending}"> Pending Approvals </a></li>
-	        <li class="menu-item"><a th:href="@{/manager/team}"> View Team Leaves </a></li>
-	        <li class="menu-item"><a th:href="@{/manager/compensation}"> Manage Compensations </a></li>
+	        <li class="menu-item"><a th:href="@{/manager/team}"> Team Leave History </a></li>
+	        <li class="menu-item"><a th:href="@{/manager/compensation}"> Review Compensations </a></li>
         </ul>
         
         <li class="menu-item"><a th:href="@{/stafflogout}" >Logout</a></li>
