--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemList.html
@@ -33,7 +33,7 @@
 				<td>
 				<button type="button">
 					<a href = "subLeaves.html" th:href="@{/manager/team/}+${teamMember.id}"
-					class="btn btn-default"> Edit </a>
+					class="btn btn-default"> View Leave History </a>
 				</button>
 				</td>
 			</tr>
