--- a/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
@@ -22,7 +22,7 @@
 </div>
 <div th:fragment="menu" id="menu">
     <ul class="manager-nav-bar">
-        <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Home</a></li>
+        <li class="menu-item"><a th:href="@{/submit}" >Home</a></li>
         <ul>
 	        <li class="menu-item"><a th:href="@{/applyleave}" >Apply Leave</a></li>
 	        <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Claim Compensation</a></li>
