fixed minor errors

--- a/CATeam3LAPS/src/main/resources/templates/managerCompensationList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerCompensationList.html
@@ -36,7 +36,7 @@
 					<td>
 					<button type="button">
 						<a th:href="@{/manager/leave/display/}+${compLeave.leaveAppliedId}"
-							class="btn btn-default"><span th:text="#{caption.detail}"></span>
+							class="btn btn-default">View Details</span>
 					</a>
 					</button>
 					</td>
