--- a/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
@@ -24,9 +24,9 @@
     <ul class="manager-nav-bar">
         <li class="menu-item"><a th:href="@{/submit}" >Home</a></li>
         <ul>
-	        <li class="menu-item"><a th:href="@{/applyleave}" >Apply Leave</a></li>
-	        <li class="menu-item"><a th:href="@{/leave/viewHistory}" >Claim Compensation</a></li>
-	        <li class="menu-item"><a th:href="@{/leave/viewHistory}" >View History</a></li>
+	        <li class="menu-item"><a th:href="@{/staff/applyleave}" >Apply Leave</a></li>
+	        <li class="menu-item"><a th:href="@{/staff/viewHistory}" >Claim Compensation</a></li>
+	        <li class="menu-item"><a th:href="@{/staff/viewHistory}" >View History</a></li>
         </ul>
         
         <ul>
