--- a/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/adminGeneral.html
@@ -26,6 +26,7 @@
         <li class="menu-item"><a th:href="@{/admin/leave-type/list/1}" >Manage Leave Type</a></li>
         <li class="menu-item"><a th:href="@{/admin/role/list/1}" >Manage Role</a></li>
         <li class="menu-item"><a th:href="@{/admin/holiday/list/1}" >Manage Holidays</a></li>
+        <li class="menu-item"><a th:href="@{/admin/logout}" >Logout</a></li>
     </ul>
 </div>
 </body>
